[package]
name = "aws-kms-ca"
version = "0.1.0"
authors = ["Kirk Peterson <necrobious@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.2" }
yasna = { version="0.3.1", features = ["chrono","num-bigint","bit-vec"] }
chrono = { version = "0.4" }

ring = "0.16"
tokio = { version = "0.2", features = ["macros"] }
clap = "2.33.0"
rusoto_core = {version = "0.43.0", default_features = false, features=["rustls"]}
rusoto_kms  = {version = "0.43.0", default_features = false, features=["rustls"]}
bytes = "0.5"
base64 = "0.12"
hex = "0.4.2"
