[package]
name = "aws-kms-ca"
version = "0.1.0"
authors = ["Kirk Peterson <necrobious@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Certificate module
num-bigint = { version = "0.4.2" }
yasna = { version="0.4.0", features = ["chrono","num-bigint","bit-vec"] }
chrono = { version = "0.4" }
bytes = { version = "1" }

# Examples
[dev-dependencies]
ring = "0.16"
tokio = { version = "1.0", features = [ "full" ] } 
clap = "2.33.3"
rusoto_core = {version = "0.47.0", default_features = false, features=["rustls"]}
rusoto_kms  = {version = "0.47.0", default_features = false, features=["rustls"]}
base64 = "0.13"
hex = "0.4.3"
