[package]
name = "aws-kms-ca"
version = "0.2.0"
authors = ["Kirk Peterson <necrobious@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Certificate module
num-bigint = { version = "0.4.2" }
yasna = { version="0.5.0", features = ["time","num-bigint","bit-vec"] }
time = { version = "0.3", features = ["macros"]}
bytes = { version = "1" }
tracing = { version = "0.1", optional = true }

# Examples
[dev-dependencies]
ring = "0.16"
tokio = { version = "1.0", features = [ "full" ] } 
clap = { version = "4.0.26", features = ["derive"] }
aws-config = { version = "0.51.0" }
aws-sdk-kms = { version = "0.21.0" }
#rusoto_core = {version = "0.47.0", default_features = false, features=["rustls"]}
#rusoto_kms  = {version = "0.47.0", default_features = false, features=["rustls"]}
base64 = "0.13"
hex = "0.4.3"

[features]
default = []
