[package]
name = "aws-kms-ca-root-cfn-cr-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
ring = "0.16"
lambda_runtime = "0.7"
service_fn = { git = "https://github.com/necrobious/service_fn.git", branch = "main" }
serde = "1.0.136"
serde_json = "^1"
serde_derive = "^1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
time = { version = "0.3", features = ["macros"]}
bytes = { version = "1" }
base64 = { version = "0.13" }
aws-config = { version = "0.51.0" }
aws-sdk-kms = { version = "0.21.0" }
aws-custom-resource-provider-lambda = { path = "../../aws-custom-resource-provider/aws-custom-resource-provider-lambda" }
aws-custom-resource-provider-events = { path = "../../aws-custom-resource-provider/aws-custom-resource-provider-events" }
aws-kms-ca-x509 = { path = "../aws-kms-ca-x509" }
async-trait = "0.1.58"
