[package]
name = "aws-kms-ca-x509"
version = "0.2.0"
authors = ["Kirk Peterson <necrobious@gmail.com>"]
edition = "2021"

[dependencies]
num-bigint = { version = "0.4.2" }
yasna = { version="0.5.0", features = ["time","num-bigint","bit-vec"] }
time = { version = "0.3", features = ["macros"]}
bytes = { version = "1" }
tracing = { version = "0.1", optional = true }

[features]
default = []
